<resources>
    <string name="app_name">Strokex</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">Powered By\nNooEd Technology | Pvt.Ltd |\nwww.noodlesTechnology.com</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="para">aksljdklasdlkasjd</string>
    <string name="backStr"><![CDATA[<< Back]]></string>
    <string name="nextStr"><![CDATA[NEXT >>]]></string>
    <string name="strokeInfo1">What is a stroke?\n\n
A stroke, sometimes called a “brain attack,” occurs when blood flow to the brain is interrupted. When a stroke occurs, brain cells in the immediate area begin to die because they stop getting the oxygen and nutrients they need to function. This can cause lasting brain damage, long-term disability, or even death.
</string>
    <string name="strokeInfo2">If your stroke affected the right side of your brain, your movement and sensation on the left side of your body may be affected. If your stroke damaged the brain tissue on the left side of your brain, your movement and sensation on the right side of your body may be affected. Brain damage to the left side of your brain may cause speech and language disorders\n</string>
    <string name="strokeInfo3">What are the types of stroke?\n\nThe three main types of stroke are:\n\n
1)Ischemic stroke is caused by a blood clot that blocks or plugs a blood vessel in the brain. Blocked or narrowed blood vessels are caused by fatty deposits that build up in blood vessels or by blood clots or other debris that travel through your bloodstream and lodge in the blood vessels in your brain. This is the most common type; about 80 percent of strokes are ischemic.
2)Hemorrhagic stroke is caused by a blood vessel that breaks and bleeds into the brain. The leaked blood puts too much pressure on brain cells, which damages them.
High blood pressure and aneurysms—balloon-like bulges in an artery that can stretch and burst—are examples of conditions that can cause a hemorrhagic stroke.
There are two types of hemorrhagic strokes:\n\n
Intracerebral hemorrhage is the most common type of hemorrhagic stroke. It occurs when an artery in the brain bursts, flooding the surrounding tissue with blood.
Subarachnoid hemorrhage is a less common type of hemorrhagic stroke. It refers to bleeding in the area between the brain and the thin tissues that cover it.
3)Transient Ischemic Attack (TIA) Another condition that\'s similar to a stroke. It\'s sometimes called a "mini-stroke." TIAs happen when the blood supply to the brain is blocked for a short time- usually no more than 5 minutes. The damage to the brain cells isn\'t permanent, but if you have had a TIA, you are at a much higher risk of having a stroke.
Recognizing and treating TIAs can lower the risk of a major stroke. If you have a TIA, your health care team can find the cause and take steps to prevent a major stroke.
Who is at risk for a stroke?\n\n
Certain factors can raise your risk of a stroke. The major risk factors include\n
High blood pressure. This is the primary risk factor for a stroke.\n
Diabetes.\n
Heart diseases. Atrial fibrillation and other heart diseases can cause blood clots that lead to stroke.\n
Smoking. When you smoke, you damage your blood vessels and raise your blood pressure.\n
A personal or family history of stroke or TIA.\n
Age. Your risk of stroke increases as you get older.\n
Race and ethnicity. African Americans have a higher risk of stroke.\n
There are also other factors that are linked to a higher risk of stroke, such as\n
Alcohol and illegal drug use\n
Not getting enough physical activity\n
High cholesterol\n
Unhealthy diet\n
Having obesity\n

What are the symptoms of stroke?\n
The symptoms of stroke often happen quickly. They include\n
Sudden numbness or weakness of the face, arm, or leg (especially on one side of the body)\n
Sudden confusion, trouble speaking, or understanding speech\n
Sudden trouble seeing in one or both eyes\n
Sudden difficulty walking, dizziness, loss of balance or coordination\n
Sudden severe headache with no known cause\n
</string>
    <string name="strokeInfo4">How are strokes diagnosed?\n\n
Some of the tests you may have include\n
A physical exam. Your doctor will do a number of tests you\'re familiar with, such as listening to your heart and checking your blood pressure. You\'ll also have a neurological exam to see how a potential stroke is affecting your nervous system.
Your mental alertness\n
Your coordination and balance\n
Any numbness or weakness in your face, arms, and legs\n
Any trouble speaking and seeing clearly\n
Blood tests\n
Computerized tomography (CT) scan\n
Magnetic resonance imaging (MRI)\n
Carotid ultrasound\n
Cerebral angiogram\n
Echocardiogram Heart tests, which can help detect heart problems or blood clots that may have led to a stroke.\n
What are the treatments for stroke?\n
Treatments for stroke include medicines, surgery, and rehabilitation. Which treatments you get depend on the type of stroke and the stage of treatment. The different stages are
Acute treatment, to try to stop a stroke while it is happening\n
Post-stroke rehabilitation, to overcome the disabilities caused by the stroke\n
Prevention, to prevent a first stroke or, if you have already had one, prevent another stroke\n
Can strokes be prevented?If you have already had a stroke or are at risk of having a stroke, you can make some heart-healthy lifestyle changes to try to prevent a future stroke:\n
Managing your blood pressure and cholesterol levels\n
Managing diabetes.\n
Quitting smoking\n
Avoiding alcohol.\n
Treating obstructive sleep apnea (OSA).\n
Avoiding illegal drugs.\n
Eating a heart-healthy diet\n
Aiming for a healthy weight\n
Managing stress\n
Getting regular physical activity or exercise\n
If these changes aren\'t enough, you may need medicine to control your risk factors.\n
What disabilities can result from a stroke?\n
Although stroke is a disease of the brain, it can affect the entire body. A stroke can sometimes cause temporary or permanent disabilities, depending on how long the brain lacks blood flow and which part was affected. Complications may include:
•Paralysis or loss of muscle movement. You may become paralyzed on one side of your body, or lose control of certain muscles, such as those on one side of your face or one arm.
Difficulty talking or swallowing.\n
Memory loss or thinking difficulties.\n
Emotional problems.\n
Pain.\n
Changes in behavior and self-care ability.\n
</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="login">Login</string>
    <string name="create_new_account">Create New Account</string>
    <string name="passive_exercise">Passive Exercise</string>
    <string name="functional_activities">Functional Activities</string>
    <string name="active_exercise">Active Exercise</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="urdu">Urdu</string>
    <string name="my_account">My Account</string>
    <string name="update_an_account">Update Account</string>
    <string name="change_password">Change Password</string>
    <string name="logout">Logout</string>
    <string name="bilateral_shoulder_flexion_with_both_hands_interlocked">Bilateral Shoulder Flexion with both hands interlocked</string>
    <string name="shoulder_horizontal_abduction">Shoulder Horizontal Abduction</string>
    <string name="shoulder_abduction">Shoulder Abduction</string>
    <string name="elbow_flexion_and_extension">Elbow Flexion and Extension</string>
    <string name="elbow_pronation_and_supination">Elbow Pronation and Supination</string>
    <string name="wrist_flexion_and_extension">Wrist Flexion and Extension</string>
    <string name="extend_elbow">Extend Elbow</string>
    <string name="forearm_to_box">Forearm to Box</string>
    <string name="hand_to_box">Hand to Box</string>
    <string name="stroke_information">Stroke Information</string>
    <string name="excercuse_information">Exercise Progression/Repetitions</string>
    <string name="excercuse_desc">Week 1 : 8-10 repetitions\nWeek 2 : 15 repetitionn\nWeek 3 : 20 repetitions\nWeek 4 : 25-30 repetitions</string>
    <string name="upper_limb_exercise">Upper Limb Exercise</string>
    <string name="lift_can">Lift Can</string>
    <string name="lift_pencil">Lift Pencil</string>
    <string name="stack_checkers">Stack Checkers</string>
    <string name="flip_cards">Flip Cards</string>
    <string name="fold_towel">Fold Towel</string>
    <string name="drinking_water_from_glass">Drinking Water from Glass</string>
    <string name="lifting_glass_of_water_at_90_shoulder_flexion">Lifting Glass of Water at 90° Shoulder Flexion</string>
    <string name="moving_5_crystals_from_table_to_box">Moving 5 Crystals from Table to Box</string>
    <string name="wiping_the_table">Wiping the Table</string>
    <string name="grasping_and_releasing_ball">Grasping and Releasing Ball</string>
    <string name="combing_hair">Combing Hair</string>
    <string name="eating_with_affected_hand">Eating with Affected Hand</string>
    <string name="opening_and_closing_jar">Opening and Closing Jar</string>
    <string name="shoulder_flexion">Shoulder Flexion</string>
    <string name="roms_for_shoulder">ROMs for shoulder</string>
    <string name="roms_for_elbow">ROMs for Elbow</string>
    <string name="roms_for_wrist_fingers_and_thumb">ROMs for wrist, Fingers and Thumb</string>
    <string name="full_name">Full Name</string>
    <string name="age">Age</string>
    <string name="city">City</string>
    <string name="translation">Translation</string>
    <string name="bilateral_shoulder_flexion_with_both_hands_interlocked_Str">•\tPatient should be in supine lying position.\n\" +                 \"•\tAsk the patient to clasp/hold the affected hand with the help of unaffected hand.\n\" +                 \"•\tThen flex both shoulders as demonstrated in the video.\n\" +                 \"•\tRepeat this exercise 10 times.\n</string>
    <string name="shoulder_horizontal_abduction_str">•\tPatient should be in supine lying position.\n\" +                 \"•\tAsk the patient to clasp/hold the affected hand with the help of unaffected hand.\n\" +                 \"•\tBring both arms at the level of 90° then move the arms right and left side as demonstrated in the video.\n\" +                 \"•\tRepeat this exercise 10 times.\n</string>
    <string name="shoulder_abduction_str">•\tPatient should be in supine lying position.\n\" +                 \"•\tAsk the patient to abduct the affected arm as demonstrated in the video.\n\" +                 \"•\tRepeat this exercise 10 times.\n</string>
    <string name="elbow_flexion_and_extension_str">•\tAsk the patient to place the affected arm on the table.\n\" +                 \"•\tThen bend (flex) and straighten (extend) the elbow as demonstrated in the video.\n\" +                 \"•\tKeep your body straight and shoulders back and avoid compensatory movements of body.\n\" +                 \"•\tRepeat this exercise 10 times.\n</string>
    <string name="elbow_pronation_and_supination_str">•\tAsk the patient to place the affected arm on the table.\n\" +                 \"•\tPerform the pronation and supination of elbow as demonstrated in the video.\n\" +                 \"•\tKeep your body straight and shoulders back and avoid compensatory movements of body.\n\" +                 \"•\tRepeat this exercise 10 times.\n</string>
    <string name="wrist_flexion_and_extension_str">•\tAsk the patient to clasp/hold the affected hand with the help of unaffected hand.\n\" +                 \"•\tThen bend and straighten the wrist as demonstrated in the video.\n\" +                 \"•\tKeep your body straight and shoulders back and avoid compensatory movements of body.\n\" +                 \"•\tRepeat this exercise 10 times.\n</string>
</resources>