<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/NestedScrollBarStyle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/fullscreenBackgroundColor"
        android:theme="@style/ThemeOverlay.FYP.FullscreenContainer"
        tools:context=".fragments.FragmentSplashScreen">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="24dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="24dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideAbove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="120dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideBottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="24dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <TextView
            android:id="@+id/header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="100dp"
            android:gravity="center_vertical"
            android:text="@string/app_name"
            android:textSize="50dp"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/subheader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:text="Active Exercise"
            android:padding="5dp"
            android:textColor="@color/white"
            android:textSize="24dp"
            app:layout_constraintStart_toStartOf="@+id/guideline6"
            app:layout_constraintTop_toBottomOf="@+id/header" />


        <TextView
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="Bilateral Shoulder Flexion with both hands interlocked"
            android:padding="5dp"
            android:textColor="@color/white"
            android:background="@drawable/border"
            android:textSize="15dp"
            app:layout_constraintStart_toStartOf="@+id/guideline6"
            app:layout_constraintTop_toBottomOf="@+id/subheader" />


        <RelativeLayout
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="@+id/guideline6"
            app:layout_constraintTop_toBottomOf="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <VideoView
                android:id="@+id/videoView"
                android:foreground="@color/black"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_width="match_parent"
                android:layout_height="200dp">

            </VideoView>

            <RelativeLayout
                android:id="@+id/videoBtnsLayout"
                android:weightSum="5"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/videoView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:layout_weight="1"
                    android:id="@+id/backBtn"
                    android:textColor="@color/themeColor"
                    android:text="@string/backStr"
                    android:layout_gravity="right"
                    android:background="@drawable/clickable"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"></Button>
                   <Button
                       android:layout_alignParentRight="true"
                       android:layout_gravity="right"
                       android:layout_weight="1"
                       android:id="@+id/nextBtn"
                    android:textColor="@color/themeColor"
                    android:text="@string/nextStr"
                    android:background="@drawable/clickable"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"></Button>
            </RelativeLayout>
            <TextView
                android:layout_marginTop="20dp"
                android:layout_below="@+id/videoBtnsLayout"
                android:id="@+id/transtaionHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:gravity="center"
                android:text="Translation"
                android:padding="5dp"
                android:textColor="@color/white"
                android:textSize="24dp"
                />


            <TextView
                android:layout_below="@+id/transtaionHeader"
                android:id="@+id/translationText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="This is a text"
                android:padding="5dp"
                android:textColor="@color/white"
                android:textSize="15dp"
                />


        </RelativeLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>